# hw07_sqlalchemy

./: README.md  alembic.ini  models.py  my_select.py  pyproject.toml  seed.py  test.py
alembic/versions/: 17c369d7a81f_create_grade_table.py  ee39f56189d8_init.py
