[tool.poetry]
name = "hw07-sqlalchemy"
version = "0.1.0"
description = "sqlalchemy and alembic"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "hw07_sqlalchemy"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"
psycopg2 = "^2.9.9"
faker = "^24.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
